--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,7 +1,3 @@
-.search-banner {
-  justify-content: center;
-}
-
 .space-between {
   display: flex;
   justify-content: space-between;
@@ -18,18 +14,20 @@
   margin: 10px 20px 0px 0px;
 }
 
+.search-banner {
+  justify-content: center;
+}
 .search-bar {
   height: 100%;
 }
-
 .search-form {
   padding: 0px 10px;
   width: 484px;
   height: 37px;
   border: 2px solid;
   border-color: #4285f4;
+  position: relative;
 }
-
 .search-category {
   padding: 0px 10px 0px 0px;
   width: 25%;
@@ -43,11 +41,10 @@
 .search-category__btn {
   color: #bfbfbf;
 }
-
 .search-keyword {
   display: flex;
 }
-.search-keyword__input {
+.search-keyword__input-text {
   width: 300px;
   border: none;
   margin-left: 10px;
@@ -68,9 +65,13 @@
   border: 1px solid;
 }
 
+.hidden {
+  display: none;
+}
+
 .history-keyword {
   position: absolute;
-  right: 186px;
+  right: -2px;
   color: #bfbfbf;
 }
 .history-keyword--contents {
@@ -86,6 +87,22 @@
 }
 .history-keyword--contents__keywords {
   border-top: 1px solid;
+  border-color: #bfbfbf;
+  color: #000;
+}
+.history-keyword--contents__keywords ul {
+  display: flex;
+  flex-direction: column-reverse;
+  padding-left: 0;
+}
+.history-keyword--contents__keywords li {
+  margin: 5px 0px;
+  font-size: 0.8em;
+}
+.history-keyword--contents__keywords li:hover {
+  cursor: pointer;
+  color: #4285f4;
+  text-decoration: underline;
 }
 .history-keyword--controller {
   height: 32px;
@@ -104,6 +121,10 @@ button {
 }
 button:hover {
   cursor: pointer;
+}
+
+li {
+  list-style: none;
 }
 
 /*# sourceMappingURL=style.css.map */
