--- a/styles/sass/components/_searcher.scss
+++ b/styles/sass/components/_searcher.scss
@@ -1,7 +1,3 @@
-.search-banner {
-  justify-content: center;
-}
-
 .space-between {
   display: flex;
   justify-content: space-between;
@@ -18,53 +14,60 @@
   margin: 10px 20px 0px 0px;
 }
 
-.search-bar {
-  height: 100%;
-}
-
-.search-form {
-  padding: 0px 10px;
-  width: 484px;
-  height: 37px;
-  border: 2px solid {
-    color: $blue;
-  }
-}
-
-.search-category {
-  padding: 0px 10px 0px 0px;
-  width: 25%;
-  z-index: -1;
-  border-right: 1px solid {
-    color: #ddd;
+.search {
+  &-banner {
+    justify-content: center;
   }
 
-  p {
-    font-size: 13px;
+  &-bar {
+    height: 100%;
   }
 
-  &__btn {
-    color: #bfbfbf;
-  }
-}
-
-.search-keyword {
-  display: flex;
-  &__input {
-    width: 300px;
-    border: none;
-    margin-left: 10px;
+  &-form {
+    padding: 0px 10px;
+    width: 484px;
+    height: 37px;
+    border: 2px solid {
+      color: $blue;
+    }
+    position: relative;
   }
 
-  &__voice {
-    color: #787879;
+  &-category {
+    padding: 0px 10px 0px 0px;
+    width: 25%;
+    z-index: -1;
+    border-right: 1px solid {
+      color: #ddd;
+    }
+
+    p {
+      font-size: 13px;
+    }
+
+    &__btn {
+      color: #bfbfbf;
+    }
   }
 
-  &__btn {
-    color: $blue;
-    margin-left: 10px;
-  }
-  :focus {
-    outline: none;
+  &-keyword {
+    display: flex;
+    &__input-text {
+      width: 300px;
+      border: none;
+      margin-left: 10px;
+    }
+
+    &__voice {
+      color: #787879;
+    }
+
+    &__btn {
+      color: $blue;
+      margin-left: 10px;
+    }
+    :focus {
+      outline: none;
+    }
   }
 }
