feat: 키보드로 최근검색어창과 검색창을 이동하는 기능 구현

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -102,7 +102,7 @@
   padding-left: 0;
 }
 .history-keyword--contents__keywords li {
-  margin: 5px 0px;
+  padding: 5px 0px;
   font-size: 0.8em;
 }
 .history-keyword--controller {
