--- a/styles/sass/components/_history.scss
+++ b/styles/sass/components/_history.scss
@@ -42,7 +42,7 @@
         padding-left: 0;
       }
       li {
-        margin: 5px 0px;
+        padding: 5px 0px;
         font-size: 0.8em;
       }
     }
