--- a/styles/sass/components/_history.scss
+++ b/styles/sass/components/_history.scss
@@ -1,24 +1,10 @@
-.box {
-  padding: 0px 20px;
-  border: 1px solid;
-}
-
-.hidden {
-  display: none;
-}
-
-.selected-keyword {
-  cursor: pointer;
-  color: $blue;
-  text-decoration: underline;
-}
-
 .history-keyword {
   position: absolute;
   right: -2px;
   color: #bfbfbf;
 
   &--contents {
+    @include box;
     width: 352px;
     border-bottom: 0px;
     height: 300px;
@@ -49,6 +35,8 @@
   }
 
   &--controller {
+    @include box;
+    @include space-between;
     height: 32px;
     top: 379px;
     background-color: #f5f5f5;
