--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,20 +1,15 @@
-@import "./helpers/variables";
+//base
+@import "./base/reset";
+
+//abstracts
+@import "./abstracts/variables";
+@import "./abstracts/mixins";
 
 //componenets
 @import "./components/searcher";
 @import "./components/history";
 
+//layout
+@import "./layout/header";
+
 // sass ./styles/sass/main.scss ./styles/css/style.css
-
-button {
-  border: none;
-  background-color: transparent;
-  font-size: 1.2em;
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-li {
-  list-style: none;
-}
