feat: 최근검색어끄기 기능 추가, refactor: 변수명 수정

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -7,7 +7,7 @@
 
 //componenets
 @import "./components/searcher";
-@import "./components/history";
+@import "./components/recent-search-box";
 
 //layout
 @import "./layout/header";
