--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -44,32 +44,32 @@ li {
 .search-category__btn {
   color: #bfbfbf;
 }
-.search-keyword {
+.search-box {
   display: flex;
 }
-.search-keyword__input-text {
+.search-box__input-text {
   width: 300px;
   border: none;
   margin-left: 10px;
 }
-.search-keyword__voice {
+.search-box__voice {
   color: #787879;
 }
-.search-keyword__btn {
+.search-box__btn {
   color: #4285f4;
   margin-left: 10px;
 }
-.search-keyword :focus {
+.search-box :focus {
   outline: none;
 }
 
-.history-keyword {
+.recent-search-box {
   position: absolute;
   width: 394px;
   right: -2px;
   color: #bfbfbf;
 }
-.history-keyword--contents {
+.recent-search-box--contents {
   padding: 0px 20px;
   border: 1px solid;
   background-color: #fff;
@@ -78,26 +78,26 @@ li {
   height: 300px;
   background: white;
 }
-.history-keyword--contents__title {
+.recent-search-box--contents__title {
   font-weight: 600;
   font-size: 0.8em;
   color: #000;
 }
-.history-keyword--contents__keywords {
+.recent-search-box--contents__keywords {
   border-top: 1px solid;
   border-color: #bfbfbf;
   color: #000;
 }
-.history-keyword--contents__keywords ul {
+.recent-search-box--contents__keywords ul {
   display: flex;
   flex-direction: column-reverse;
   padding-left: 0;
 }
-.history-keyword--contents__keywords li {
+.recent-search-box--contents__keywords li {
   padding: 5px 0px;
   font-size: 0.8em;
 }
-.history-keyword--controller {
+.recent-search-box--controller {
   padding: 0px 20px;
   border: 1px solid;
   background-color: #fff;
@@ -107,11 +107,11 @@ li {
   top: 379px;
   background-color: #f5f5f5;
 }
-.history-keyword--controller button {
+.recent-search-box--controller button {
   font-size: 0.75em;
   color: #888;
 }
-.history-keyword__off {
+.recent-search-box__off {
   padding: 0px 20px;
   border: 1px solid;
   background-color: #fff;
@@ -122,7 +122,7 @@ li {
   padding: 15px 0px;
   border-bottom: none;
 }
-.history-keyword__off p {
+.recent-search-box__off p {
   font-size: 0.8em;
   color: #717171;
   font-weight: 700;
