feat: 자동완성창에도 키보드, 마우스 조작으로 키워드 포커싱 하는 기능 구현

--- a/styles/sass/components/_recent-search-box.scss
+++ b/styles/sass/components/_recent-search-box.scss
@@ -2,9 +2,9 @@
   position: absolute;
   width: 394px;
   right: -2px;
-  color: #bfbfbf;
+  color: $gray;
 
-  &--contents {
+  &__contents {
     @include box;
     width: 352px;
     border-bottom: 0px;
