--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -11,6 +11,10 @@ li {
   list-style: none;
 }
 
+ul {
+  padding-left: 0;
+}
+
 .search-banner {
   display: flex;
   align-items: center;
@@ -69,7 +73,7 @@ li {
   right: -2px;
   color: #bfbfbf;
 }
-.recent-search-box--contents {
+.recent-search-box__contents {
   padding: 0px 20px;
   border: 1px solid;
   background-color: #fff;
@@ -78,22 +82,22 @@ li {
   height: 300px;
   background: white;
 }
-.recent-search-box--contents__title {
+.recent-search-box__contents__title {
   font-weight: 600;
   font-size: 0.8em;
   color: #000;
 }
-.recent-search-box--contents__keywords {
+.recent-search-box__contents__keywords {
   border-top: 1px solid;
   border-color: #bfbfbf;
   color: #000;
 }
-.recent-search-box--contents__keywords ul {
+.recent-search-box__contents__keywords ul {
   display: flex;
   flex-direction: column-reverse;
   padding-left: 0;
 }
-.recent-search-box--contents__keywords li {
+.recent-search-box__contents__keywords li {
   padding: 5px 0px;
   font-size: 0.8em;
 }
@@ -126,6 +130,25 @@ li {
   font-size: 0.8em;
   color: #717171;
   font-weight: 700;
+}
+
+.auto-completion-box {
+  padding: 0px 20px;
+  border: 1px solid;
+  background-color: #fff;
+  position: absolute;
+  width: 352px;
+  height: 333px;
+  right: -2px;
+  color: #bfbfbf;
+}
+.auto-completion-box__contents {
+  color: #000;
+  padding: 5px 0px;
+}
+.auto-completion-box li {
+  padding: 5px 0px;
+  font-size: 0.8em;
 }
 
 .hidden {
