feat: 카테고리 박스로 옵션을 선택하는 기능 구현

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -26,33 +26,34 @@ ul {
   height: 100%;
 }
 .search-form {
-  padding: 0px 10px;
   width: 484px;
   height: 37px;
   border: 2px solid;
   border-color: #4285f4;
   position: relative;
 }
-.search-category {
+.search-category-box {
   display: flex;
   justify-content: space-between;
-  padding: 0px 10px 0px 0px;
-  width: 25%;
+  width: 23.5%;
+  padding-left: 10px;
   z-index: -1;
   border-right: 1px solid;
   border-right-color: #ddd;
 }
-.search-category p {
+.search-category-box p {
   font-size: 13px;
 }
-.search-category__btn {
+.search-category-box__btn {
   color: #bfbfbf;
 }
 .search-box {
   display: flex;
+  height: 100%;
+  align-items: center;
 }
 .search-box__input-text {
-  width: 300px;
+  width: 286px;
   border: none;
   margin-left: 10px;
 }
@@ -61,25 +62,24 @@ ul {
 }
 .search-box__btn {
   color: #4285f4;
-  margin-left: 10px;
+  padding-right: 10px;
 }
 .search-box :focus {
   outline: none;
 }
 
 .recent-search-box {
+  width: 75%;
   position: absolute;
-  width: 394px;
   right: -2px;
-  color: #bfbfbf;
 }
 .recent-search-box__contents {
-  padding: 0px 20px;
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
-  width: 352px;
-  border-bottom: 0px;
   height: 300px;
+  padding: 0px 20px;
+  border-bottom: 0px;
   background: white;
 }
 .recent-search-box__contents__title {
@@ -102,22 +102,23 @@ ul {
   font-size: 0.8em;
 }
 .recent-search-box--controller {
-  padding: 0px 20px;
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
   height: 32px;
   top: 379px;
   background-color: #f5f5f5;
+  padding: 0px 20px;
 }
 .recent-search-box--controller button {
   font-size: 0.75em;
   color: #888;
 }
 .recent-search-box__off {
-  padding: 0px 20px;
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -133,22 +134,45 @@ ul {
 }
 
 .auto-completion-box {
-  padding: 0px 20px;
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
-  position: absolute;
-  width: 352px;
+  width: 75%;
   height: 333px;
+  position: absolute;
   right: -2px;
   color: #bfbfbf;
 }
 .auto-completion-box__contents {
   color: #000;
-  padding: 5px 0px;
+  padding: 5px 20px;
 }
 .auto-completion-box li {
   padding: 5px 0px;
   font-size: 0.8em;
+}
+
+.category-option-box {
+  border: 1px solid;
+  border-color: #bfbfbf;
+  background-color: #fff;
+  position: absolute;
+  left: -2px;
+  width: 23.5%;
+  font-size: 0.8em;
+  max-height: 645px;
+  overflow-y: scroll;
+  padding-left: 10px;
+}
+.category-option-box__contents {
+  padding: 0px 3px;
+}
+.category-option-box__contents__list li {
+  padding: 6px 0px;
+}
+
+.search-helper-box {
+  width: 100%;
 }
 
 .hidden {
