--- a/styles/sass/components/_auto-completion-box.scss
+++ b/styles/sass/components/_auto-completion-box.scss
@@ -1,13 +1,13 @@
 .auto-completion-box {
   @include box;
-  position: absolute;
-  width: 352px;
+  width: 75%;
   height: 333px;
+  position: absolute;
   right: -2px;
   color: $gray;
   &__contents {
     color: #000;
-    padding: 5px 0px;
+    padding: 5px 20px;
   }
   li {
     padding: 5px 0px;
