--- a/styles/sass/components/_recent-search-box.scss
+++ b/styles/sass/components/_recent-search-box.scss
@@ -31,6 +31,12 @@
       li {
         padding: 5px 0px;
         font-size: 0.8em;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      button i {
+        color: $gray;
       }
     }
   }
