--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -11,6 +11,10 @@ li {
   list-style: none;
 }
 
+ul {
+  padding-left: 0;
+}
+
 .search-banner {
   display: flex;
   align-items: center;
@@ -21,99 +25,108 @@ li {
   align-items: center;
   height: 100%;
 }
+.search-bar:hover {
+  cursor: pointer;
+}
 .search-form {
-  padding: 0px 10px;
   width: 484px;
   height: 37px;
   border: 2px solid;
   border-color: #4285f4;
   position: relative;
 }
-.search-category {
+.search-category-box {
   display: flex;
   justify-content: space-between;
-  padding: 0px 10px 0px 0px;
-  width: 25%;
+  width: 23.5%;
+  padding-left: 10px;
   z-index: -1;
   border-right: 1px solid;
   border-right-color: #ddd;
 }
-.search-category p {
+.search-category-box p {
   font-size: 13px;
 }
-.search-category__btn {
+.search-category-box__btn {
   color: #bfbfbf;
 }
-.search-keyword {
+.search-box {
   display: flex;
+  height: 100%;
+  align-items: center;
 }
-.search-keyword__input-text {
-  width: 300px;
+.search-box__input-text {
+  width: 286px;
   border: none;
   margin-left: 10px;
 }
-.search-keyword__voice {
+.search-box__voice {
   color: #787879;
 }
-.search-keyword__btn {
+.search-box__btn {
   color: #4285f4;
-  margin-left: 10px;
+  padding-right: 10px;
 }
-.search-keyword :focus {
+.search-box :focus {
   outline: none;
 }
 
-.history-keyword {
+.recent-search-box {
+  width: 75%;
   position: absolute;
-  width: 394px;
   right: -2px;
-  color: #bfbfbf;
 }
-.history-keyword--contents {
-  padding: 0px 20px;
+.recent-search-box__contents {
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
-  width: 352px;
-  border-bottom: 0px;
   height: 300px;
+  padding: 0px 20px;
+  border-bottom: 0px;
   background: white;
 }
-.history-keyword--contents__title {
+.recent-search-box__contents__title {
   font-weight: 600;
   font-size: 0.8em;
   color: #000;
 }
-.history-keyword--contents__keywords {
+.recent-search-box__contents__keywords {
   border-top: 1px solid;
   border-color: #bfbfbf;
   color: #000;
 }
-.history-keyword--contents__keywords ul {
+.recent-search-box__contents__keywords ul {
   display: flex;
   flex-direction: column-reverse;
   padding-left: 0;
 }
-.history-keyword--contents__keywords li {
+.recent-search-box__contents__keywords li {
   padding: 5px 0px;
   font-size: 0.8em;
+  display: flex;
+  justify-content: space-between;
 }
-.history-keyword--controller {
-  padding: 0px 20px;
+.recent-search-box__contents__keywords button i {
+  color: #bfbfbf;
+}
+.recent-search-box--controller {
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
   height: 32px;
   top: 379px;
   background-color: #f5f5f5;
+  padding: 0px 20px;
 }
-.history-keyword--controller button {
+.recent-search-box--controller button {
   font-size: 0.75em;
   color: #888;
 }
-.history-keyword__off {
-  padding: 0px 20px;
+.recent-search-box__off {
   border: 1px solid;
+  border-color: #bfbfbf;
   background-color: #fff;
   display: flex;
   justify-content: center;
@@ -122,10 +135,52 @@ li {
   padding: 15px 0px;
   border-bottom: none;
 }
-.history-keyword__off p {
+.recent-search-box__off p {
   font-size: 0.8em;
   color: #717171;
   font-weight: 700;
+}
+
+.auto-completion-box {
+  border: 1px solid;
+  border-color: #bfbfbf;
+  background-color: #fff;
+  width: 75%;
+  height: 333px;
+  position: absolute;
+  right: -2px;
+  color: #bfbfbf;
+}
+.auto-completion-box__contents {
+  color: #000;
+  padding: 5px 20px;
+}
+.auto-completion-box li {
+  padding: 5px 0px;
+  font-size: 0.8em;
+}
+
+.category-option-box {
+  border: 1px solid;
+  border-color: #bfbfbf;
+  background-color: #fff;
+  position: absolute;
+  left: -2px;
+  width: 23.5%;
+  font-size: 0.8em;
+  max-height: 645px;
+  overflow-y: scroll;
+  padding-left: 10px;
+}
+.category-option-box__contents {
+  padding: 0px 3px;
+}
+.category-option-box__contents__list li {
+  padding: 6px 0px;
+}
+
+.search-helper-box {
+  width: 100%;
 }
 
 .hidden {
