--- a/styles/sass/components/_recent-search-box.scss
+++ b/styles/sass/components/_recent-search-box.scss
@@ -1,14 +1,13 @@
-.history-keyword {
+.recent-search-box {
+  width: 75%;
   position: absolute;
-  width: 394px;
   right: -2px;
-  color: #bfbfbf;
 
-  &--contents {
+  &__contents {
     @include box;
-    width: 352px;
-    border-bottom: 0px;
     height: 300px;
+    padding: 0px 20px;
+    border-bottom: 0px;
     background: white;
 
     &__title {
@@ -32,6 +31,12 @@
       li {
         padding: 5px 0px;
         font-size: 0.8em;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      button i {
+        color: $gray;
       }
     }
   }
@@ -42,6 +47,7 @@
     height: 32px;
     top: 379px;
     background-color: #f5f5f5;
+    padding: 0px 20px;
     button {
       font-size: 0.75em;
       color: #888;
