refactor: 뷰를 searchBar, categoryBar로 분리, mvc구조 개선

--- a/client/styles/sass/main.scss
+++ b/client/styles/sass/main.scss
@@ -6,11 +6,9 @@
 @import "./abstracts/mixins";
 
 //componenets
-@import "./components/searcher";
-@import "./components/recent-search-box";
-@import "./components/auto-completion-box";
-@import "./components/category";
-@import "./components/search-helper-box";
+@import "./components/search-bar";
+@import "./components/category-bar";
+@import "./components/search-popup";
 
 //layout
-@import "./layout/header";
+@import "./layout/header-searchForm";
