--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -15,179 +15,168 @@ ul {
   padding-left: 0;
 }
 
-.search-banner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.search-bar {
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-.search-bar:hover {
-  cursor: pointer;
-}
 .search-form {
-  width: 484px;
   height: 37px;
   border: 2px solid;
   border-color: #4285f4;
-  position: relative;
+}
+
+.search-banner {
+  width: 503px;
+}
+.search-bar {
+  width: 75%;
+  margin-left: 124px;
+  margin-top: -30px;
 }
 .search-box {
   display: flex;
-  height: 100%;
-  align-items: center;
+  justify-content: space-between;
+  padding-left: 15px;
 }
-.search-box__input-text {
-  width: 286px;
+.search-box__input {
+  width: 290px;
   border: none;
-  margin-left: 10px;
 }
-.search-box__voice {
+.search-box__input:focus {
+  outline: none;
+}
+.search-box__voiceBtn {
   color: #787879;
 }
-.search-box__btn {
+.search-box__searchBtn {
   color: #4285f4;
   padding-right: 10px;
 }
-.search-box :focus {
-  outline: none;
-}
 
-.recent-search-box {
-  width: 75%;
-  position: absolute;
-  right: -2px;
-}
-.recent-search-box__contents {
-  border: 1px solid;
-  border-color: #bfbfbf;
-  background-color: #fff;
-  height: 300px;
-  padding: 0px 20px;
-  border-bottom: 0px;
-  background: white;
-}
-.recent-search-box__contents__title {
-  font-weight: 600;
-  font-size: 0.8em;
-  color: #000;
-}
-.recent-search-box__contents__keywords {
-  border-top: 1px solid;
-  border-color: #bfbfbf;
-  color: #000;
-}
-.recent-search-box__contents__keywords ul {
-  display: flex;
-  flex-direction: column-reverse;
-  padding-left: 0;
-}
-.recent-search-box__contents__keywords li {
-  padding: 5px 0px;
-  font-size: 0.8em;
-  display: flex;
-  justify-content: space-between;
-}
-.recent-search-box__contents__keywords button i {
-  color: #bfbfbf;
-}
-.recent-search-box--controller {
+.history__btns {
   border: 1px solid;
   border-color: #bfbfbf;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
+  width: 335px;
   height: 32px;
-  top: 379px;
   background-color: #f5f5f5;
   padding: 0px 20px;
+  border-top: none;
 }
-.recent-search-box--controller button {
+.history__btns button {
   font-size: 0.75em;
   color: #888;
 }
-.recent-search-box__off {
-  border: 1px solid;
-  border-color: #bfbfbf;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 55px;
-  padding: 15px 0px;
-  border-bottom: none;
-}
-.recent-search-box__off p {
-  font-size: 0.8em;
-  color: #717171;
-  font-weight: 700;
-}
 
-.auto-completion-box {
-  border: 1px solid;
-  border-color: #bfbfbf;
-  background-color: #fff;
-  width: 75%;
-  height: 333px;
-  position: absolute;
-  right: -2px;
-  color: #bfbfbf;
+.category-bar {
+  width: 25%;
+  height: 100%;
 }
-.auto-completion-box__contents {
-  color: #000;
-  padding: 5px 20px;
-}
-.auto-completion-box li {
-  padding: 5px 0px;
-  font-size: 0.8em;
-}
-
 .category-box {
   display: flex;
   justify-content: space-between;
-  width: 23.5%;
+  height: 100%;
   padding-left: 10px;
-  z-index: -1;
   border-right: 1px solid;
   border-right-color: #ddd;
 }
 .category-box p {
   font-size: 13px;
 }
-.category-box__btn {
+.category-box button {
   color: #bfbfbf;
+}
+.category-box:hover {
+  cursor: pointer;
 }
 .category-option-box {
   border: 1px solid;
   border-color: #bfbfbf;
   background-color: #fff;
-  position: absolute;
-  left: -2px;
-  width: 23.5%;
   font-size: 0.8em;
   max-height: 645px;
   overflow-y: scroll;
-  padding-left: 10px;
 }
 .category-option-box__contents {
-  padding: 0px 3px;
+  padding: 0px 13px;
 }
 .category-option-box__contents__list li {
   padding: 6px 0px;
 }
+.category-option-box:hover {
+  cursor: pointer;
+}
 
-.search-helper-box {
-  width: 100%;
+.search-popup {
+  border: 1px solid;
+  border-color: #bfbfbf;
+  background-color: #fff;
+  width: 375px;
+  height: 300px;
+  margin-top: 6px;
+}
+.search-popup__contents {
+  color: #000;
+  padding: 0px 20px;
+}
+.search-popup li {
+  padding: 5px 0px;
+  font-size: 0.8em;
+}
+
+.auto-search {
+  height: 333px;
+}
+.auto-search__list li {
+  margin: 0 auto;
+}
+
+.recent-search__title {
+  padding-bottom: 10px;
+  border-bottom: 1px solid;
+  border-color: #bfbfbf;
+  margin: 13px 0px 10px 0px;
+  font-weight: 600;
+  font-size: 0.8em;
+}
+.recent-search-off {
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.recent-search-off span {
+  font-size: 0.8em;
+}
+.recent-search__list {
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 0;
+}
+.recent-search__list li {
+  display: flex;
+  justify-content: space-between;
+}
+.recent-search button i {
+  color: #bfbfbf;
+}
+
+.header-searchForm {
+  display: flex;
+  justify-content: center;
+}
+
+.search-banner {
+  padding: 20px 0px;
+}
+.search-banner h1,
+.search-banner img {
+  margin: 0;
 }
 
 .hidden {
   display: none;
 }
 
-.selected-keyword {
+.selected {
   cursor: pointer;
   color: #4285f4;
   text-decoration: underline;
@@ -196,7 +185,7 @@ ul {
 .page-title img {
   width: 174px;
   height: 41px;
-  margin: 10px 20px 0px 0px;
+  margin: 0px 20px 0px 0px;
 }
 
 /*# sourceMappingURL=style.css.map */
