--- a/client/styles/sass/components/_category-bar.scss
+++ b/client/styles/sass/components/_category-bar.scss
@@ -1,37 +1,40 @@
 .category {
+  &-bar {
+    width: 25%;
+    height: 100%;
+  }
+
   &-box {
     @include space-between;
-    width: 23.5%;
+    height: 100%;
     padding-left: 10px;
-    z-index: -1;
     border-right: 1px solid {
       color: #ddd;
     }
-
     p {
       font-size: 13px;
     }
-
-    &__btn {
+    button {
       color: #bfbfbf;
+    }
+    &:hover {
+      cursor: pointer;
     }
   }
 
   &-option-box {
     @include box;
-    position: absolute;
-    left: -2px;
-    width: 23.5%;
     font-size: 0.8em;
     max-height: 645px;
     overflow-y: scroll;
-    padding-left: 10px;
-
     &__contents {
-      padding: 0px 3px;
+      padding: 0px 13px;
       &__list li {
         padding: 6px 0px;
       }
+    }
+    &:hover {
+      cursor: pointer;
     }
   }
 }
