feat: 메인 캐러셀, 메가드롭다운 메뉴

--- a/client/styles/sass/base/_reset.scss
+++ b/client/styles/sass/base/_reset.scss
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+}
+
+header {
+  margin: 0 auto;
+}
+
+.main {
+  margin-top: -4px;
+}
+
 button {
   border: none;
   background-color: transparent;
