--- a/client/styles/css/style.css
+++ b/client/styles/css/style.css
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+}
+
+header {
+  margin: 0 auto;
+}
+
+.main {
+  margin-top: -4px;
+}
+
 button {
   border: none;
   background-color: transparent;
@@ -15,60 +27,104 @@ ul {
   padding-left: 0;
 }
 
-.search-form {
-  height: 37px;
-  border: 2px solid;
-  border-color: #4285f4;
+.top-bar {
+  background-color: #f0f0f0;
+  margin-bottom: -2px;
 }
 
-.search-banner {
-  width: 503px;
-}
-.search-bar {
-  width: 75%;
-  margin-left: 124px;
-  margin-top: -30px;
-}
-.search-box {
+.top-bar__menu {
+  height: 32px;
   display: flex;
   justify-content: space-between;
-  padding-left: 15px;
-}
-.search-box__input {
-  width: 290px;
-  border: none;
-}
-.search-box__input:focus {
-  outline: none;
-}
-.search-box__voiceBtn {
-  color: #787879;
-}
-.search-box__searchBtn {
-  color: #4285f4;
-  padding-right: 10px;
+  align-items: center;
 }
 
-.history__btns {
+.header-menu,
+.header-subscribe {
+  display: flex;
+}
+.header-menu li,
+.header-subscribe li {
+  font-size: 0.7em;
+  padding: 0px 10px;
+}
+
+.category-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 110px;
+  height: 115px;
+  background-color: #4285f4;
+  margin-right: 30px;
+  position: relative;
+}
+.category-btn i {
+  font-size: 2.2em;
+}
+.category-btn span {
+  color: #fff;
+  font-size: 0.8em;
+  padding-top: 10px;
+}
+.category-btn:hover {
+  cursor: pointer;
+}
+
+.category-menu {
+  position: absolute;
+  top: 115px;
+  left: 0px;
+  height: 620px;
+  z-index: 2;
+}
+.category-menu li {
+  font-size: 0.8em;
+  padding: 11px;
+}
+
+.one-depth,
+.two-depth,
+.third-depth {
+  position: absolute;
+  height: 620px;
+  background-color: #fff;
   border: 1px solid;
   border-color: #bfbfbf;
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  width: 335px;
-  height: 32px;
-  background-color: #f5f5f5;
-  padding: 0px 20px;
-  border-top: none;
+  margin: 0;
 }
-.history__btns button {
-  font-size: 0.75em;
-  color: #888;
+
+.one-depth {
+  left: 0px;
+  width: 150px;
+}
+
+.two-depth {
+  left: 151px;
+  width: 571px;
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+.third-depth {
+  left: 302px;
+  width: 420px;
+  background-color: transparent;
+}
+
+.selected-category {
+  color: #4285f4;
+}
+.selected-category i {
+  font-size: 1em;
 }
 
 .category-bar {
   width: 25%;
   height: 100%;
+  z-index: 2;
+  position: relative;
 }
 .category-box {
   display: flex;
@@ -105,11 +161,71 @@ ul {
   cursor: pointer;
 }
 
+.main-search-banner {
+  display: flex;
+}
+
+.page-title {
+  margin-bottom: 0px;
+}
+.page-title img {
+  width: 174px;
+  height: 41px;
+  margin: 0px 20px 0px 0px;
+}
+
+.search-form {
+  height: 37px;
+  border: 2px solid;
+  border-color: #4285f4;
+}
+.search-banner {
+  min-width: 522px;
+  padding: 20px 0px 0px 0px;
+}
+.search-banner h1,
+.search-banner img {
+  margin: 0;
+}
+.search-bar {
+  width: 75.5%;
+  margin-left: 129px;
+  margin-top: -30px;
+  z-index: 2;
+  position: relative;
+}
+.search-box {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 15px;
+}
+.search-box__input {
+  width: 290px;
+  border: none;
+}
+.search-box__input:focus {
+  outline: none;
+}
+.search-box__voiceBtn {
+  color: #787879;
+}
+.search-box__searchBtn {
+  color: #4285f4;
+  padding-right: 10px;
+}
+
+.sub-search-banner__list {
+  display: flex;
+}
+.sub-search-banner__list li {
+  font-size: 0.8em;
+  padding: 0px 15px;
+}
+
 .search-popup {
   border: 1px solid;
   border-color: #bfbfbf;
   background-color: #fff;
-  width: 375px;
   height: 300px;
   margin-top: 6px;
 }
@@ -159,17 +275,82 @@ ul {
   color: #bfbfbf;
 }
 
-.header-searchForm {
+.history__btns {
+  border: 1px solid;
+  border-color: #bfbfbf;
+  background-color: #fff;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  height: 32px;
+  background-color: #f5f5f5;
+  padding: 0px 20px;
+  border-top: none;
+}
+.history__btns button {
+  font-size: 0.75em;
+  color: #888;
 }
 
-.search-banner {
-  padding: 20px 0px;
+.icon-menus {
+  display: flex;
 }
-.search-banner h1,
-.search-banner img {
-  margin: 0;
+
+.my-coupang,
+.my-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 25px;
+}
+.my-coupang i,
+.my-cart i {
+  font-size: 2.2em;
+  color: #686868;
+}
+.my-coupang span,
+.my-cart span {
+  font-size: 0.8em;
+  padding-top: 10px;
+}
+
+.event-slider {
+  position: relative;
+  width: 1020px;
+  height: 450px;
+  margin: 0 auto;
+}
+.event-slider ul {
+  position: absolute;
+  top: 15px;
+  right: 0;
+}
+.event-slider li img {
+  display: block;
+}
+.event-slider li:hover {
+  cursor: pointer;
+}
+
+.selectedTumbNails {
+  border: 2px solid;
+  border-color: #4285f4;
+}
+
+.todays-hot-contents {
+  position: absolute;
+  transform: translateX(-50%);
+  left: 50%;
+}
+
+.header-searchForm {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.top-bar__menu,
+.header-searchForm {
+  width: 1020px;
+  margin: 0 auto;
 }
 
 .hidden {
@@ -180,12 +361,6 @@ ul {
   cursor: pointer;
   color: #4285f4;
   text-decoration: underline;
-}
-
-.page-title img {
-  width: 174px;
-  height: 41px;
-  margin: 0px 20px 0px 0px;
 }
 
 /*# sourceMappingURL=style.css.map */
