--- a/client/styles/sass/components/header/_category-bar.scss
+++ b/client/styles/sass/components/header/_category-bar.scss
@@ -2,6 +2,8 @@
   &-bar {
     width: 25%;
     height: 100%;
+    z-index: 2;
+    position: relative;
   }
 
   &-box {
@@ -24,7 +26,7 @@
 
   &-option-box {
     @include box;
-    font-size: 0.8em;
+    font-size: $basic-font-size;
     max-height: 645px;
     overflow-y: scroll;
     &__contents {
