--- a/client/styles/sass/components/header/_search-popup.scss
+++ b/client/styles/sass/components/header/_search-popup.scss
@@ -1,6 +1,5 @@
 .search-popup {
   @include box;
-  width: 375px;
   height: 300px;
   margin-top: 6px;
   &__contents {
@@ -9,7 +8,7 @@
   }
   li {
     padding: 5px 0px;
-    font-size: 0.8em;
+    font-size: $basic-font-size;
   }
 }
 
@@ -28,7 +27,7 @@
     margin: 13px 0px 10px 0px;
     font: {
       weight: 600;
-      size: 0.8em;
+      size: $basic-font-size;
     }
   }
 
@@ -36,7 +35,7 @@
     height: 75px;
     @include center;
     span {
-      font-size: 0.8em;
+      font-size: $basic-font-size;
     }
   }
 
@@ -52,5 +51,18 @@
 
   button i {
     color: $gray;
+  }
+}
+
+.history__btns {
+  @include box;
+  @include space-between;
+  height: 32px;
+  background-color: #f5f5f5;
+  padding: 0px 20px;
+  border-top: none;
+  button {
+    font-size: 0.75em;
+    color: #888;
   }
 }
